--- a/RazorLib/Shared/hardwares/HardwareFormComponent.razor
+++ b/RazorLib/Shared/hardwares/HardwareFormComponent.razor
@@ -33,7 +33,7 @@ else
         <label for="exampleInputAddress" class="form-label">IP</label>
         <div class="input-group">
             <input @bind-value="hw.Address" type="text" class="form-control" id="exampleInputAddress" aria-describedby="addresHelp">
-            <a title="Открыть устройство на новой вкладке" target="_blank" href="@($"{hw.Address}/{hw.Password}")" class="btn btn-outline-primary" role="button">Открыть</a>
+            <a title="Открыть устройство на новой вкладке" target="_blank" href="@($"{(hw.Address.StartsWith(http_schema_prefix, StringComparison.OrdinalIgnoreCase) ? hw.Address : $"{http_schema_prefix}{hw.Address}")}/{hw.Password}")" class="btn btn-outline-primary" role="button">Открыть</a>
         </div>
         <div id="addresHelp" class="form-text mb-3">Сетевой адрес.</div>
 
@@ -76,6 +76,8 @@ else
 
     [Parameter]
     public Action? UpdateFormEvent { get; set; }
+
+    string http_schema_prefix => "http://";
 
     async Task InitDeleteAsync()
     {
