--- a/AbLogServer.Client/Pages/IndexPage.razor
+++ b/AbLogServer.Client/Pages/IndexPage.razor
@@ -4,19 +4,20 @@
 
 <PageTitle>Настройки</PageTitle>
 
-<h1>Настройка приложения</h1>
+<figure>
+    <blockquote class="blockquote">
+        <p>Локальный сервер.</p>
+    </blockquote>
+    <figcaption class="blockquote-footer">
+        Прямой доступ к системе
+    </figcaption>
+</figure>
 
 <MudTabs Elevation="2" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-6">
-    <MudTabPanel Text="MQTT">
-        <MqttConfigComponent />
-    </MudTabPanel>
     <MudTabPanel Text="Email">
         <EmailConfigComponent />
     </MudTabPanel>
     <MudTabPanel Text="Telegram bot">
         <TelegramBotConfigComponent />
-    </MudTabPanel>    
-    <MudTabPanel Text="About">
-        <span>Разное ...</span>
     </MudTabPanel>
 </MudTabs>
