--- a/RemoteClient/Pages/IndexPage.razor
+++ b/RemoteClient/Pages/IndexPage.razor
@@ -4,19 +4,20 @@
 
 <PageTitle>Настройки</PageTitle>
 
-<h1>Настройка приложения</h1>
+<figure>
+    <blockquote class="blockquote">
+        <p>Удалённый сервер.</p>
+    </blockquote>
+    <figcaption class="blockquote-footer">
+        Режим работы: через MQTT
+    </figcaption>
+</figure>
 
-<MudTabs Elevation="2" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-6">
-    <MudTabPanel Text="MQTT" Icon="@Icons.Custom.Uncategorized.Radioactive" Color="Color.Primary">
-        <MqttConfigComponent />
-    </MudTabPanel>
+<MudTabs Elevation="2" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-6">    
     <MudTabPanel Text="Email">
         <EmailConfigComponent />
     </MudTabPanel>
     <MudTabPanel Text="Telegram bot">
         <TelegramBotConfigComponent />
-    </MudTabPanel>
-    <MudTabPanel Text="About">
-        <span>Разное ...</span>
     </MudTabPanel>
 </MudTabs>
