--- a/RemoteClient/Shared/NavMenu.razor
+++ b/RemoteClient/Shared/NavMenu.razor
@@ -17,21 +17,39 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav id="main-left-menu" class="flex-column">
-        <div class="nav-item px-3" title="Home page">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> @(IsShort ? "" : "Home")
-            </NavLink>
-        </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/hardwares-page">
                 <span class="oi oi-puzzle-piece" aria-hidden="true"></span> @(IsShort ? "" : "Устройства")
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/cameras-page">
-                <span class="oi oi-camera-slr" aria-hidden="true"></span> @(IsShort ? "" : "Камеры")
+        <div class="nav-item px-3" title="Home page">
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                <span class="oi oi-wrench" aria-hidden="true"></span> @(IsShort ? "" : "Настройки")
             </NavLink>
         </div>
+        <div class="nav-item px-3" title="MQTT config">
+            <NavLink class="nav-link" href="/mqtt-config-page" Match="NavLinkMatch.All">
+                <span class="oi oi-key" aria-hidden="true"></span> @(IsShort ? "" : "MQTT")
+            </NavLink>
+        </div>
+        @if (IsDebug)
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/scripts-page">
+                    <span class="oi oi-script" aria-hidden="true"></span> @(IsShort ? "" : "Скрипты")
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/triggers-page">
+                    <span class="oi oi-pulse" aria-hidden="true"></span> @(IsShort ? "" : "Тригеры")
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/cameras-page">
+                    <span class="oi oi-camera-slr" aria-hidden="true"></span> @(IsShort ? "" : "Камеры")
+                </NavLink>
+            </div>
+        }
     </nav>
 </div>
 
@@ -42,6 +60,12 @@
 
     [Parameter, EditorRequired]
     public Action ModeChangeHandle { get; set; } = default!;
+
+#if DEBUG
+    bool IsDebug = true;
+#else
+    bool IsDebug = false;
+#endif
 
     /// <summary>
     /// блокировка таймера
