--- a/RemoteClient/Shared/NavMenu.razor
+++ b/RemoteClient/Shared/NavMenu.razor
@@ -34,7 +34,7 @@
         </div>
         @if (IsDebug)
         {
-            <div class="nav-item px-3">
+            @*<div class="nav-item px-3">
                 <NavLink class="nav-link" href="/scripts-page">
                     <span class="oi oi-script" aria-hidden="true"></span> @(IsShort ? "" : "Скрипты")
                 </NavLink>
@@ -48,7 +48,7 @@
                 <NavLink class="nav-link" href="/cameras-page">
                     <span class="oi oi-camera-slr" aria-hidden="true"></span> @(IsShort ? "" : "Камеры")
                 </NavLink>
-            </div>
+            </div>*@
         }
     </nav>
 </div>
