--- a/RazorLib/Shared/html/HtmlRootTranslatorComponent.razor
+++ b/RazorLib/Shared/html/HtmlRootTranslatorComponent.razor
@@ -6,6 +6,7 @@
 @using Microsoft.JSInterop;
 @using AngleSharp.Dom;
 @using MudBlazor;
+@using SharedLib;
 
 @inherits BlazorAngleTreeComponentBaseModel
 
