--- a/RazorLib/Shared/settings/MqttConfigComponent.razor
+++ b/RazorLib/Shared/settings/MqttConfigComponent.razor
@@ -82,7 +82,7 @@
                             <input @bind-value="conf.PrefixMqtt" @bind-value:event="oninput" type="text" class="form-control" id="exampleInputPrefix" aria-describedby="prefixHelp">
 
                         </div>
-                        <div id="prefixHelp" class="form-text">Для разделения разных групп пользователей друг от друга в рамках одного общего MQTT сервера</div>
+                        <div id="prefixHelp" class="form-text">Для разделения разных серверов друг от друга в рамках одного общего MQTT сервера</div>
                     </div>
                 </div>
             </div>
