--- a/RazorLib/Shared/hardwares/HardwareFormComponent.razor
+++ b/RazorLib/Shared/hardwares/HardwareFormComponent.razor
@@ -44,16 +44,20 @@ else
         </div>
         <div id="passwordHelp" class="form-text mb-3">Пароль доступа к устройству</div>
 
-        <div class="mb-3">
-            <div title="Оповещения. Устройство может генерировать рассылку уведомлений/оповещений" class="form-check form-check-inline form-switch">
-                <input @bind-value="hw.AlarmSubscriber" class="form-check-input" type="checkbox" id="inlineCheckboxAlarmSubscriber">
-                <label class="form-check-label" for="inlineCheckboxAlarmSubscriber">Уведомления</label>
+        @if (IsDebug)
+        {
+            <div class="mb-3">
+                <div title="Оповещения. Устройство может генерировать рассылку уведомлений/оповещений" class="form-check form-check-inline form-switch">
+                    <input @bind-value="hw.AlarmSubscriber" class="form-check-input" type="checkbox" id="inlineCheckboxAlarmSubscriber">
+                    <label class="form-check-label" for="inlineCheckboxAlarmSubscriber">Уведомления</label>
+                </div>
+                <div title="Поддержка удалённых команд (удалённое управление)" class="form-check form-check-inline form-switch">
+                    <input @bind-value="hw.CommandsAllowed" class="form-check-input" type="checkbox" id="inlineCheckboxCommandsAllowed">
+                    <label class="form-check-label" for="inlineCheckboxCommandsAllowed">Команды</label>
+                </div>
             </div>
-            <div title="Поддержка удалённых команд (удалённое управление)" class="form-check form-check-inline form-switch">
-                <input @bind-value="hw.CommandsAllowed" class="form-check-input" type="checkbox" id="inlineCheckboxCommandsAllowed">
-                <label class="form-check-label" for="inlineCheckboxCommandsAllowed">Команды</label>
-            </div>
-        </div>
+        }
+
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             @if (hw.Id > 0)
             {
@@ -82,6 +86,12 @@ else
     bool ShowPass = false;
     HardwareBaseModel hw = new();
     ShowMessagesComponent? showMessages;
+
+#if DEBUG
+    bool IsDebug = true;
+#else
+    bool IsDebug = false;
+#endif
 
     async Task InitDeleteAsync()
     {
