--- a/RazorLib/Shared/hardwares/HardwareNavButtonComponent.razor
+++ b/RazorLib/Shared/hardwares/HardwareNavButtonComponent.razor
@@ -1,11 +1,11 @@
 ﻿@using System.Text.RegularExpressions;
 @using System.Collections.Specialized;
-@using MudBlazor
+@using System.Collections.Concurrent;
 @using RazorLib.Shared.navs.pills;
 @using RazorLib.Shared.html;
 @using System.Web;
+@using MudBlazor;
 @using SharedLib;
-@using System.Collections.Concurrent;
 
 @inherits ReloadPageComponentBaseModel
 @implements IDisposable
@@ -99,7 +99,7 @@ else
                 StateHasChanged();
                 await _syncLock.WaitAsync();
 
-                EntriyResponseModel rest = await _hardwares.CheckPortHardware(new PortHardwareCheckRequestModel() { PortNum = int.Parse(path_parameters.Get("pt")!), HardwareId = Id, CreatePortIfNoptExist = true }, cancellationToken);
+                EntriyResponseModel rest = await _hardwares.CheckPortHardware(new PortHardwareCheckRequestModel() { PortNum = uint.Parse(path_parameters.Get("pt")!), HardwareId = Id, CreatePortIfNoptExist = true }, cancellationToken);
 
                 showMessages?.ShowMessages(rest.Messages);
                 if (rest.IsSuccess)
