--- a/RazorLib/Shared/hardwares/HardwareFormComponent.razor
+++ b/RazorLib/Shared/hardwares/HardwareFormComponent.razor
@@ -46,7 +46,7 @@ else
 
         @if (IsDebug)
         {
-            <div class="mb-3">
+            @*<div class="mb-3">
                 <div title="Оповещения. Устройство может генерировать рассылку уведомлений/оповещений" class="form-check form-check-inline form-switch">
                     <input @bind-value="hw.AlarmSubscriber" class="form-check-input" type="checkbox" id="inlineCheckboxAlarmSubscriber">
                     <label class="form-check-label" for="inlineCheckboxAlarmSubscriber">Уведомления</label>
@@ -55,7 +55,7 @@ else
                     <input @bind-value="hw.CommandsAllowed" class="form-check-input" type="checkbox" id="inlineCheckboxCommandsAllowed">
                     <label class="form-check-label" for="inlineCheckboxCommandsAllowed">Команды</label>
                 </div>
-            </div>
+            </div>*@
         }
 
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
