--- a/RemoteClient/Pages/IndexPage.razor
+++ b/RemoteClient/Pages/IndexPage.razor
@@ -20,4 +20,7 @@
     <MudTabPanel Text="Telegram bot">
         <TelegramBotConfigComponent />
     </MudTabPanel>
+    <MudTabPanel Text="About">
+        
+    </MudTabPanel>
 </MudTabs>
