--- a/RemoteClient/Pages/IndexPage.razor
+++ b/RemoteClient/Pages/IndexPage.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 
 @using RazorLib.Shared.settings
+@using RazorLib.Shared
 
 <PageTitle>Настройки</PageTitle>
 
@@ -21,6 +22,6 @@
         <TelegramBotConfigComponent />
     </MudTabPanel>
     <MudTabPanel Text="About">
-        
+        <AboutComponent />
     </MudTabPanel>
 </MudTabs>
