--- a/RemoteClient/Shared/MainLayout.razor
+++ b/RemoteClient/Shared/MainLayout.razor
@@ -11,9 +11,9 @@
 
     <main>
         <div class="top-row px-4 bg-body-tertiary" style="z-index:5;">
-            <a href="https://ab-log.ru" target="_blank">ab-log.ru</a>
+            <a title="Исходники C# .NET6" href="https://github.com/badhitman/AbLog" target="_blank">GitHub</a>
+            <a title="Официальный магазин оборудования" href="https://ab-log.ru" target="_blank">ab-log</a>
         </div>
-
         <article class="content px-4">
             @Body
         </article>
