--- a/RazorLib/Shared/AboutComponent.razor
+++ b/RazorLib/Shared/AboutComponent.razor
@@ -2,7 +2,7 @@
 @using SharedLib;
 
 @inject ISnackbar _snackbar;
-@inject IAboutService _about;
+@inject IToolsService _tools;
 
 @inherits BlazorBusyComponentBaseModel
 
