--- a/ab-log.web/ab-log.web.client/_Imports.razor
+++ b/ab-log.web/ab-log.web.client/_Imports.razor
@@ -7,3 +7,10 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using ABLog4.web.client
+@using RazorLib.Shared.hardwares
+@using RazorLib.Shared.settings
+@using RazorLib.Shared
+@using RazorLib
+@using BlazorLib
+@using SharedLib
+@using MudBlazor
